--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,11 @@
     <div class="col-12 text-center">
         <h1 class="display-4">Vietnamese Student Association</h1>
         <p class="lead">Discover and participate in cultural events and activities organized by the VSA.</p>
+
+        <div class="text-center mb-4">
+            <img src="{{ url_for('static', filename='images/vsa_logo.png') }}" alt="Columbia VSA Logo" 
+                 style="height: 120px; margin: 15px auto;">
+        </div>
     </div>
 </div>
 
