--- a/api/static/css/style.css
+++ b/api/static/css/style.css
@@ -34,6 +34,10 @@ body {
     max-width: 1200px;
 }
 
+.container.mt-3:not(:has(*:not(:empty))) {
+    display: none;
+}
+
 .row {
     margin-bottom: 30px;
 }
